<resources>
    <string name="app_name">Ajedrez</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Ajedrez San Carlos</string>
    <string name="nav_header_subtitle">Tu Mejor Movimiento</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="assistance_title">Asistencia</string>
    <string name="students_title">Estudiantes</string>
    <string name="lessons_title">Lecciones</string>
    <string name="lesson_edit_title">Editar leccion</string>
    <string name="yes_button">Yes</string>
    <string name="no_button">No</string>
    <string name="subjects_title">Temas</string>
    <string name="first_lesson_date">Fecha de ingreso</string>
    <string name="school">Escuela</string>
    <string name="birth_date">Fecha de Nacimiento</string>
    <string name="phone_number">Teléfono</string>
    <string name="name">Nombre</string>
    <string name="last_class">Última clase asistida</string>
    <string name="search">Buscar</string>
    <string name="activo">Activo</string>
    <string name="fecha">Fecha</string>
    <string name="grupo">Grupo</string>
    <string name="eliminar">Eliminar</string>
    <string name="save_button">Save button</string>

    <!-- Popup messages -->
    <string name="error_title">Error</string>
    <string name="error_name_required">El nombre es requerido</string>
    <string name="error_unsuccessful">Error al actualizar los datos</string>
    <string name="successful">Guardado con éxito</string>
    <string name="file_not_found">File not found</string>
    <string name="edit_button">Edit button</string>

    <!-- Login texts -->
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>
