<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_students"
            android:icon="@drawable/ic_menu_students"
            android:title="@string/students_title" />
        <item
            android:id="@+id/nav_assistance"
            android:icon="@drawable/ic_menu_assistance"
            android:title="@string/assistance_title" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_lessons"
            android:title="@string/lessons_title" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="Tools" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
