<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.students.InfoStudentFragment"
    android:fitsSystemWindows="true"
    android:padding="@dimen/mid_dimen">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/contentLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:scaleType="fitCenter"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_pawn"
                android:layout_margin="@dimen/small_dimen"
                android:padding="@dimen/small_dimen" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:hint="@string/name"
                android:focusableInTouchMode="true">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/nameText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_edit"
                    android:focusable="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phoneLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:hint="@string/phone_number"
                android:focusableInTouchMode="true">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/phoneText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_edit"
                    android:inputType="phone"
                    android:maxLength="8"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/birthDateLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:hint="@string/birth_date">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/birthDateText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_edit"
                    android:focusable="false"
                    android:clickable="true"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/schoolLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:hint="@string/school">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/schoolText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_edit"
                    android:focusableInTouchMode="true"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/firstClassLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:hint="@string/first_lesson_date">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/firstClassText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_edit"
                    android:focusable="false"
                    android:clickable="true"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lastClassLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:hint="@string/last_class">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/lastClassText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_edit"
                    android:focusable="false"
                    android:clickable="false"/>
            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/isActiveCheckBox"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="18sp"
                android:text="@string/activo"/>

            <Button
                android:id="@+id/deleteBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eliminar"
                android:drawableStart="@drawable/ic_delete"
                android:drawableTint="@color/lightRed"
                android:textColor="@color/lightRed"
                android:background="@android:color/transparent"
                android:layout_marginStart="4dp"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/updateStudent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_save"
        android:tint="@android:color/white"
        android:contentDescription="@string/save_button" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>